--- a/src/index.css
+++ b/src/index.css
@@ -67,7 +67,7 @@ html, body, #root {
 
 /*========= contact us page style ========== */
 
-.contact-us , .FQA {
+.contact-us , .FQA , .submit-complaint, .complaint-list {
     height: 100%;
     margin-block: 60px;
 }
